--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
     "version": "node ensureChangelogHeaders.js",
-    "convertIcoMoon": "scripts/convertIcoMoon.ts"
+    "convertIcoMoon": "scripts/convertIcoMoon.ts",
+    "preventManualRelease": "node scripts/preventManualRelease.js"
   },
   "repository": {
     "type": "git",
@@ -58,6 +59,8 @@
     "@types/react-dom": "^16.9.2",
     "@types/theme-ui": "^0.3.7",
     "autoprefixer": "^9.8.4",
+    "axios": "^0.21.4",
+    "chalk": "^4.1.2",
     "css-loader": "^3.4.2",
     "docz": "^2.3.1",
     "eslint": "^6.3.0",
