--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -35,6 +35,7 @@
     "filesize": "^6.1.0",
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.20",
+    "react-countdown": "^2.3.2",
     "react-dropzone": "^11.0.2",
     "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
