--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,6 +49,31 @@ references:
         echo 'export BASE_PATH=${PULL_REQUEST_NUMBER:-${CIRCLE_BRANCH}}' >> $BASH_ENV
 
 jobs:
+  test_writeback:
+    <<: *container_config
+    steps:
+      - run:
+        name: Post Stats to GitHub PR
+        command: |
+          sudo apt-get install jq
+
+          pr_response=$(curl --location --request GET "https://api.github.com/repos/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/pulls?head=$CIRCLE_PROJECT_USERNAME:$CIRCLE_BRANCH&state=open" \
+          -u $GH_USER:$GH_TOKEN)
+
+          if [ $(echo $pr_response | jq length) -eq 0 ]; then
+            echo "No PR found to update"
+          else
+            pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
+          fi
+
+          curl --location --request POST "$pr_comment_url" \
+          -u $GH_USER:$GH_TOKEN \
+          --header 'Content-Type: application/json' \
+          --data-raw '{
+          "body": "This would be the data to add"
+          }'
+
+
   checkout_code:
     <<: *container_config
     steps:
@@ -185,6 +210,9 @@ workflows:
   atlantis:
     jobs:
       - checkout_code
+      - test_writeback:
+          requires:
+            - checkout_code
       - install_dependencies:
           requires:
             - checkout_code
