--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,8 +55,13 @@ jobs:
       - run:
         name: Post Stats to GitHub PR
         command: |
-          echo "Test this thing"
+          sudo apt-get install jq
 
+          if [ $(echo $pr_response | jq length) -eq 0 ]; then
+            echo "No PR found to update"
+          else
+            pr_comment_url=$(echo $pr_response | jq -r ".[]._links.comments.href")
+          fi
 
   checkout_code:
     <<: *container_config
