--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,6 +56,7 @@ jobs:
           name: Post Stats to GitHub PR
           command: |
             echo "No PR found to update"
+            echo $CIRCLE_PROJECT_USERNAME
 
   checkout_code:
     <<: *container_config
