--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           command: |
             echo "No PR found to update"
             echo $CIRCLE_PROJECT_USERNAME
-            echo $GIT_AUTHOR_NAME
+            echo $GH_USER
             echo $GH_TOKEN
 
   checkout_code:
