--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "lerna": "^3.20.2",
     "lint-staged": "^9.4.2",
     "lodash": "^4.17.15",
+    "patch-package": "^6.4.7",
     "plop": "^2.5.3",
     "postcss": "^7.0.17",
     "postcss-import": "^12.0.1",
