--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
     "install": "npm run lerna:bootstrap",
+    "postinstall": "patch-package",
     "release-the-kraken": "npm ci && lerna publish",
-    "prerelease": "lerna publish --canary --dist-tag next --preid pre",
+    "prerelease": "lerna publish --canary --dist-tag next --preid pre --summary-file lerna-publish.json",
     "ci:release": "lerna publish --yes",
     "version": "node ensureChangelogHeaders.js",
     "convertIcoMoon": "scripts/convertIcoMoon.ts",
