--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,12 +75,14 @@ jobs:
   comment_on_pr:
     <<: *container_config
     steps:
+      - *restore_repo
+      - *sum_lockfiles
+      - *restore_npm_cache
+      - *npm_install
       - run:
           name: Comment on PR
           command: |
-            echo $CIRCLE_PULL_REQUEST
-            echo $CIRCLE_PR_NUMBER
-            echo $CI_PULL_REQUEST
+              npm run githubComment
 
   check_for_manual_release:
     <<: *container_config
