say yes to publishing

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
-    "ci:prerelease": "lerna publish --canary --dist-tag canary --preid pull --no-git-reset",
+    "ci:prerelease": "lerna publish --canary --dist-tag canary --preid pull --no-git-reset --yes",
     "postci:prerelease": "node scripts/githubComment.js",
     "version": "node ensureChangelogHeaders.js",
     "convertIcoMoon": "scripts/convertIcoMoon.ts",
