--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.2.1"
   },
   "devDependencies": {
+    "chalk": "^4.1.2",
     "eslint": "^6.3.0"
   },
   "peerDependencies": {
