--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lerna:bootstrap": "lerna bootstrap",
     "lint:js": "eslint --ext .js,.jsx,.ts,.tsx .",
     "lint:css": "stylelint 'packages/**/*.css' --allow-empty-input",
-    "lint:markdown": "prettier --check '**/*.md'",
+    "lint:markdown": "prettier --check '**/*.{md,mdx}' --write",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
     "install": "npm run lerna:bootstrap",
