--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
-    "typed-css-modules-loader": "^0.0.17",
+    "typed-css-modules-loader": "0.0.18",
     "typescript": "^3.8.3"
   },
   "husky": {
