--- a/package.json
+++ b/package.json
@@ -74,9 +74,9 @@
     "jest-junit": "^6.4.0",
     "lerna": "^3.20.2",
     "lint-staged": "^9.4.2",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.21",
     "plop": "^2.5.3",
-    "postcss": "^7.0.17",
+    "postcss": "^7.0.36",
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
@@ -89,7 +89,7 @@
     "style-loader": "^0.23.1",
     "stylelint": "^11.1.1",
     "stylelint-junit-formatter": "^0.2.1",
-    "typed-css-modules-loader": "^0.0.17",
+    "typed-css-modules-loader": "0.0.18",
     "typescript": "^3.8.3"
   },
   "husky": {
