--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,7 @@ workflows:
       - test:
           requires:
             - check_for_manual_release
+          parallelism: 200
       - build_docs:
           requires:
             - check_for_manual_release
