--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -39,7 +39,7 @@
     "react-dropzone": "^11.0.2",
     "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
-    "react-markdown": "^4.1.0",
+    "react-markdown": "^7.1.0",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "time-input-polyfill": "^1.0.7",
@@ -52,6 +52,7 @@
     "@testing-library/user-event": "^12.0.2",
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
+    "@types/hast": "^2.3.4",
     "@types/react": "^16.9.43",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.9.1",
@@ -59,6 +60,7 @@
     "autoprefixer": "^9.5.1",
     "copyfiles": "^2.4.1",
     "glob": "^7.1.4",
+    "hast": "^1.0.0",
     "postcss": "^7.0.36",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
