adds the datepicker

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -36,6 +36,7 @@
     "framer-motion": "^1.10.3",
     "lodash": "^4.17.21",
     "react-countdown": "^2.3.2",
+    "react-datepicker": "^4.3.0",
     "react-dropzone": "^11.0.2",
     "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
@@ -53,6 +54,7 @@
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.9.43",
+    "@types/react-datepicker": "^4.1.7",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.9.1",
     "@types/uuid": "^3.4.5",
