--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -127,7 +127,7 @@ jobs:
           parallelism: 4
           name: "Run tests with jest"
           command: |
-            TESTS=$(circleci tests $(ls ./packages/components/src/*/*.test.tsx) | circleci tests split)
+            TESTS=$(circleci tests $(ls ./packages/components/src/*/*.test.tsx) | circleci tests split --split-by=timings)
             npm test $TESTS -- --no-cache --coverage --reporters=jest-junit
           environment:
             JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
