--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -54,6 +54,7 @@
     "@types/classnames": "^2.2.7",
     "@types/glob": "^7.1.1",
     "@types/react": "^16.9.43",
+    "@types/react-datepicker": "^4.1.7",
     "@types/react-dom": "^16.8.4",
     "@types/react-test-renderer": "^16.9.1",
     "@types/uuid": "^3.4.5",
