--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "postinstall": "patch-package",
     "build": "npm run build:cssTypes && npm run build:rollup",
     "build:rollup": "rollup --config",
     "build:cssTypes": "tcm src",
@@ -61,6 +62,7 @@
     "autoprefixer": "^9.5.1",
     "copyfiles": "^2.4.1",
     "glob": "^7.1.4",
+    "patch-package": "^6.4.7",
     "postcss": "^7.0.36",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
