--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "lint:markdown": "prettier --check '**/*.{md,mdx}' --write",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
-    "install": "npm run lerna:bootstrap",
     "postinstall": "cd packages/components && npm run patch",
+    "postpostinstall": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
