--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "lint:markdown": "prettier --check '**/*.{md,mdx}' --write",
     "lint": "npm run lint:js && npm run lint:css",
     "lint:fix": "npm run lint:js -- --fix && npm run lint:css -- --fix && npm run lint:markdown -- --write",
-    "postinstall": "npm run patchComponents && npm run lerna:bootstrap",
+    "install": "npm run lerna:bootstrap",
     "release-the-kraken": "npm ci && lerna publish",
     "prerelease": "lerna publish --canary --dist-tag next --preid pre",
     "ci:release": "lerna publish --yes",
     "version": "node ensureChangelogHeaders.js",
     "convertIcoMoon": "scripts/convertIcoMoon.ts",
-    "preventManualRelease": "node scripts/preventManualRelease.js",
-    "patchComponents": "cd $(pwd)/packages/components && npm run patch"
+    "preventManualRelease": "node scripts/preventManualRelease.js"
   },
   "repository": {
     "type": "git",
