--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -44,6 +44,7 @@
     "react-hook-form": "^6.7.2",
     "react-image-lightbox": "^5.1.1",
     "react-markdown": "^4.1.0",
+    "react-number-format": "^4.8.0",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
     "time-input-polyfill": "^1.0.7",
