add pared down version of Scheduler

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -46,6 +46,7 @@
     "react-markdown": "^4.1.0",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.2.0",
+    "rrule": "^2.6.8",
     "time-input-polyfill": "^1.0.7",
     "ts-xor": "^1.0.8",
     "uuid": "^3.3.2"
