--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -138,7 +138,7 @@ jobs:
 
   build_docs:
     <<: *container_config
-    resource_class: medium+
+    resource_class: medium
     steps:
       - *restore_repo
       - *sum_lockfiles
