--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -7,9 +7,8 @@
   "scripts": {
     "patch": "npx patch-package",
     "prebuild": "npm run patch",
-    "build": "npm run build:cssTypes && npm run build:rollup",
+    "build": "npm run build:rollup",
     "build:rollup": "rollup --config",
-    "build:cssTypes": "tcm src",
     "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
     "prepublishOnly": "ts-node --project ../../tsconfig.bin.json scripts/entryPoints.ts",
     "prepare": "npm run clean; npm run build",
