--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,6 +118,7 @@ jobs:
 
   test:
     <<: *container_config
+    parallelism: 4
     steps:
       - *restore_repo
       - *sum_lockfiles
@@ -125,8 +126,9 @@ jobs:
       - *npm_install
       - run:
           name: "Run tests with jest"
-          command:
-            npm test -- --runInBand --no-cache --coverage --reporters=jest-junit
+          command: |
+            TEST=$(circleci tests glob **/packages/*/src/**/*.test.tsx | circleci tests split)
+            npm test $TEST -- --runInBand --no-cache --coverage --reporters=jest-junit
           environment:
             JEST_JUNIT_OUTPUT: "reports/junit/js-test-results.xml"
       - store_test_results:
