remove tcm src from build and start

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -5,9 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "npm run build:cssTypes && npm run build:rollup",
-    "build:rollup": "rollup --config",
-    "build:cssTypes": "tcm src",
+    "build": "rollup --config",
     "clean": "rm -rf dist/* tsconfig.tsbuildinfo",
     "prepublishOnly": "ts-node --project ../../tsconfig.bin.json scripts/entryPoints.ts",
     "prepare": "npm run clean; npm run build",
