--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -78,6 +78,7 @@ jobs:
       - *restore_repo
       - *sum_lockfiles
       - *restore_npm_cache
+      - *npm_install
       - run:
           name: Check for manual releases
           command: |
