--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,6 +75,7 @@ jobs:
   check_for_manual_release:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - run:
           name: Check for manual releases
           command: |
@@ -88,6 +89,7 @@ jobs:
   lint_javascript:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - run: npm run lint:js -- --format junit -o reports/junit/js-lint-results.xml
       - store_test_results:
           path: reports/junit
@@ -97,6 +99,7 @@ jobs:
   lint_css:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - run: mkdir -p reports/junit
       - run: npm run lint:css -- --custom-formatter node_modules/stylelint-junit-formatter > reports/junit/css-lint-results.xml
       - store_test_results:
@@ -107,6 +110,7 @@ jobs:
   test:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - run:
           name: "Run tests with jest"
           command:
@@ -123,6 +127,7 @@ jobs:
   build_docs:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - *generate_base_path
       - run:
           command: node -v && node -e 'console.log(`heap_size_limit = ${v8.getHeapStatistics().heap_size_limit / (1024 * 1024)} MB`)' && npm run build -- --base "/${BASE_PATH}/"
@@ -142,6 +147,7 @@ jobs:
   release:
     <<: *container_config
     steps:
+      - *restore_npm_cache
       - *github_authenticity
       - add_ssh_keys:
           fingerprints:
