--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ references:
     restore_cache:
       name: Restore npm cache
       keys:
-        - npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
+        - npm-cache-v1-1234
         - npm-cache-v1
 
   npm_install: &npm_install
@@ -68,7 +68,7 @@ jobs:
       - *npm_install
       - save_cache:
           name: Save npm cache
-          key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
+          key: npm-cache-v1-{{ arch }}-1234
           paths:
             - ~/.npm
             - node_modules
