Remove sum lockfiles

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ references:
     restore_cache:
       name: Restore npm cache
       keys:
-        - npm-cache-v1-1234
+        - npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
         - npm-cache-v1
 
   npm_install: &npm_install
@@ -63,21 +63,17 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
-      - *npm_install
       - save_cache:
           name: Save npm cache
-          key: npm-cache-v1-{{ arch }}-1234
+          key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
           paths:
             - ~/.npm
-            - node_modules
 
   check_for_manual_release:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
       - run:
           name: Check for manual releases
@@ -93,7 +89,6 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
       - run: npm run lint:js -- --format junit -o reports/junit/js-lint-results.xml
       - store_test_results:
@@ -107,6 +102,7 @@ jobs:
       - *restore_repo
       - *sum_lockfiles
       - *restore_npm_cache
+      - *npm_install
       - run: mkdir -p reports/junit
       - run: npm run lint:css -- --custom-formatter node_modules/stylelint-junit-formatter > reports/junit/css-lint-results.xml
       - store_test_results:
@@ -118,7 +114,6 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
       - run:
           name: "Run tests with jest"
@@ -137,7 +132,6 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
       - *generate_base_path
       - run:
@@ -159,7 +153,6 @@ jobs:
     <<: *container_config
     steps:
       - *restore_repo
-      - *sum_lockfiles
       - *restore_npm_cache
       - *github_authenticity
       - add_ssh_keys:
