add node_modules to cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
           key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
           paths:
             - ~/.npm
+            - node_modules
 
   check_for_manual_release:
     <<: *container_config
@@ -209,3 +210,7 @@ workflows:
             - lint_css
             - test
             - build_docs
+
+
+npm-cache-v1-arch1-linux-amd64-6_85-gHFkQFRFTCRZ12Gqf3VtX8ryvW_08pWcCSydIfaOanU=
+npm-cache-v1-arch1-linux-amd64-6_85-gHFkQFRFTCRZ12Gqf3VtX8ryvW_08pWcCSydIfaOanU=
