--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,12 +30,13 @@ references:
       keys:
         - npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
 
-  save_cache: &save_cache
-    name: Save npm cache
-    key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
-    paths:
-      - ~/.npm
-      - node_modules
+  save_npm_cache: &save_npm_cache
+    save_cache:
+      name: Save npm cache
+      key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
+      paths:
+        - ~/.npm
+        - node_modules
 
   npm_install: &npm_install
     run:
