--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ references:
     run:
       name: "Persist node modules"
       command: |
-        mv -r node_modules /tmp/workspace/node_modules
+        mv node_modules /tmp/workspace/node_modules
         mv package-lock.json /tmp/workspace/package-lock.json
       persist_to_workspace:
         root: /tmp/workspace
