--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,6 +66,10 @@ jobs:
       - *sum_lockfiles
       - *restore_npm_cache
       - *npm_install
+      - persist_to_workspace:
+        root: .
+        paths:
+          - '*'
       - save_cache:
           name: Save npm cache
           key: npm-cache-v1-{{ arch }}-{{ checksum "/tmp/lock-sums" }}
@@ -75,10 +79,8 @@ jobs:
   check_for_manual_release:
     <<: *container_config
     steps:
-      - *restore_repo
-      - *sum_lockfiles
-      - *restore_npm_cache
-      - *npm_install
+      - attach_workspace:
+        at: .
       - run:
           name: Check for manual releases
           command: |
